--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Implementation/KOT/build/
-Implementation/KOT/dist/
-Implementation/KOT/nbproject/
-Implementation/KOT/test/
-Implementation/KOT/build.xml
+/Implementation/KOT/build/*
+/Implementation/KOT/dist/*
+/Implementation/KOT/nbproject/*
+/Implementation/KOT/test/*
+/Implementation/KOT/build.xml
